--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# lock files
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+/types
